--- a/cmd/deck/static/style.css
+++ b/cmd/deck/static/style.css
@@ -509,6 +509,7 @@ span.label:not(.merge-table-label):hover {
 }
 
 .command-examples {
+    white-space: pre;
     background-color: #e5e5e5;
     border-radius: 2px;
     box-shadow: 1px 1px 2px #ededed;
