--- a/cmd/deck/template/plugins.html
+++ b/cmd/deck/template/plugins.html
@@ -2,7 +2,7 @@
 
 {{define "scripts"}}
 <link rel="stylesheet" href="/static/dialog-polyfill.css?v={{deckVersion}}">
-<link rel="stylesheet" href="static/plugin-help/prettify.css?v={{deckVersion}}">
+<link rel="stylesheet" href="static/common/prettify.css?v={{deckVersion}}">
 <script type="text/javascript" src="/static/plugin_help_bundle.min.js?v={{deckVersion}}"></script>
 <script type="text/javascript" src="plugin-help.js?var=allHelp"></script>
 {{end}}
