--- a/cmd/deck/template/base.html
+++ b/cmd/deck/template/base.html
@@ -62,6 +62,7 @@
         <a class="mdl-navigation__link{{if eq .PageName "tide-history"}} mdl-navigation__link--current{{end}}" href="/tide-history">Tide History</a>
       {{ end }}
       <a class="mdl-navigation__link{{if eq .PageName "plugins"}} mdl-navigation__link--current{{end}}" href="/plugins">Plugins</a>
+      <a class="mdl-navigation__link{{if eq .PageName "configured-jobs"}} mdl-navigation__link--current{{end}}" href="/configured-jobs">Configured Jobs</a>
       <a class="mdl-navigation__link" href="https://docs.prow.k8s.io/docs/" target="_blank">Documentation <span class="material-icons">open_in_new</span></a>
     </nav>
     <footer>
