frontend cleanup and GET method checking

--- a/cmd/deck/template/configured-jobs.html
+++ b/cmd/deck/template/configured-jobs.html
@@ -35,7 +35,7 @@
 
 {{define "extra content"}}
 <dialog id="job-dialog" class="mdl-dialog">
-    <h4 class="mdl-dialog__title"></h4>
+    <h4 id="job-title" class="mdl-dialog__title"></h4>
     <div class="mdl-dialog__content">
     </div>
     <div class="mdl-dialog__actions">
