Using material design for other tables as well

--- a/cmd/deck/template/index.html
+++ b/cmd/deck/template/index.html
@@ -60,18 +60,18 @@
   </aside>
   <article>
     <div class="table-container">
-      <table id="builds">
+      <table id="builds" class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
         <thead>
         <tr>
-          <th class="icon-cell-32">State</th>
-          <th class="icon-cell-32">Log</th>
-          <th class="icon-cell-32">Rerun</th>
-          <th class="icon-cell-32">Abort</th>
-          <th>Job YML</th>
-          <th>Repository</th>
-          <th>Revision</th>
-          <th>Spyglass</th>
-          <th>Job</th>
+          <th class="mdl-data-table__cell--non-numeric">State</th>
+          <th class="mdl-data-table__cell--non-numeric">Log</th>
+          <th class="mdl-data-table__cell--non-numeric">Rerun</th>
+          <th class="mdl-data-table__cell--non-numeric">Abort</th>
+          <th class="mdl-data-table__cell--non-numeric">YAML</th>
+          <th class="mdl-data-table__cell--non-numeric">Repository</th>
+          <th class="mdl-data-table__cell--non-numeric">Revision</th>
+          <th class="mdl-data-table__cell--non-numeric">Spyglass</th>
+          <th class="mdl-data-table__cell--non-numeric">Job</th>
           <th>Scheduled</th>
           <th>Duration</th>
         </tr>
