--- a/cmd/deck/template/tide-history.html
+++ b/cmd/deck/template/tide-history.html
@@ -27,16 +27,16 @@
   </aside>
   <article>
     <div class="table-container">
-      <table id="records">
+      <table id="records" class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
         <thead>
         <tr>
           <th></th> <!-- State icon -->
-          <th>Pool</th>
-          <th>Base Commit</th>
-          <th>Action</th>
-          <th>Target</th>
+          <th class="mdl-data-table__cell--non-numeric">Pool</th>
+          <th class="mdl-data-table__cell--non-numeric">Base Commit</th>
+          <th class="mdl-data-table__cell--non-numeric">Action</th>
+          <th class="mdl-data-table__cell--non-numeric">Target</th>
           <th>Time</th>
-          <th>Error</th>
+          <th class="mdl-data-table__cell--non-numeric">Error</th>
         </tr>
         </thead>
         <tbody>
