--- a/cmd/deck/template/tide.html
+++ b/cmd/deck/template/tide.html
@@ -21,7 +21,7 @@
 </article>
 <article>
   <div class="table-container">
-    <table id="pools">
+    <table id="pools" class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
       <thead>
         <th></th>
         <th>Repo</th>
